--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bash-color": "^0.0.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.1",
     "spotify-web-api-node": "^5.0.2"
   }
