--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "spotify-web-api-node": "^5.0.2"
   }
 }
